# searcharray-beir

./: .gitignore  ascii_fold.py  compare_elasticsearch.py  evaluate_elasticsearch.py  porter.py  pyproject.toml  requirements.txt  search_array.py  similarity.py  sort.py  test_beir.py  tokenizers.py
